# openui_eval

./: .gitignore  README.md  config.yaml  evaluate_run.py  main.py  progress.md  pyproject.toml  requirements.txt
examples/: google_genai_only_config.yaml  mixed_providers_config.yaml
src/: __init__.py  cli.py
src/core/: __init__.py  config.py  config_loader.py  exceptions.py  logger.py
src/evaluation/: __init__.py  astra_evaluator.py  evaluation_schemas.py  interactive_evaluator.py  judge.py
src/frameworks/: __init__.py  angular_framework.py  base_framework.py  framework_factory.py  nextjs_framework.py  project_manager.py  react_framework.py  svelte_framework.py  vue_framework.py
src/generation/: __init__.py  html_generator.py  html_processor.py  project_generator.py
src/models/: __init__.py  base_provider.py  gemini_provider.py  google_genai_client.py  model_manager.py  models_catalog.py  ollama_client.py  ollama_provider.py  openrouter_provider.py  provider_factory.py  vllm_provider.py
src/pipeline/: __init__.py  benchmark_pipeline.py
src/rendering/: __init__.py  node_renderer.py  renderer.py
src/tasks/: __init__.py  predefined_loader.py  task_definitions.py  task_loader.py
tasks/: __init__.py  angular_additional_tasks.json  angular_comprehensive_tasks.json  angular_expanded_tasks.json  angular_final_tasks.json  artifactsbench_combined.json  artifactsbench_form.json  artifactsbench_game.json  artifactsbench_interactive.json  artifactsbench_visualization.json  artifactsbench_website.json  astra_tasks.json  frontend_additional_tasks.json  frontend_comprehensive_tasks.json  frontend_expanded_tasks.json  frontend_final_tasks.json  frontendbench_tasks.json  nextjs_additional_tasks.json  nextjs_comprehensive_tasks.json  nextjs_expanded_tasks.json  nextjs_final_tasks.json  predefined_tasks.json  react_additional_tasks.json  react_comprehensive_tasks.json  react_expanded_tasks.json  react_final_tasks.json  svelte_additional_tasks.json  svelte_comprehensive_tasks.json  svelte_expanded_tasks.json  svelte_final_tasks.json  vue_additional_tasks.json  vue_comprehensive_tasks.json  vue_expanded_tasks.json  vue_final_tasks.json  webgen_bench_tasks.json
