[project]
name = "openui-eval"
version = "0.1.0"
description = "Evaluation suite for OpenUI models"
authors = [{ name = "Anas Khan", email = "anxkhn28@gmail.com" }]
requires-python = ">=3.11"

dependencies = [
  "annotated-types==0.7.0",
  "anyio==4.9.0",
  "attrs==25.3.0",
  "beautifulsoup4==4.13.4",
  "black==25.1.0",
  "certifi==2025.6.15",
  "charset-normalizer==3.4.2",
  "chromedriver-autoinstaller==0.6.4",
  "click==8.2.1",
  "h11==0.16.0",
  "httpcore==1.0.9",
  "httpx==0.28.1",
  "idna==3.10",
  "iniconfig==2.1.0",
  "lxml==6.0.0",
  "markdown-it-py==3.0.0",
  "mdurl==0.1.2",
  "mypy-extensions==1.1.0",
  "numpy==2.3.1",
  "ollama==0.5.1",
  "outcome==1.3.0.post0",
  "packaging==25.0",
  "pandas==2.3.0",
  "pathspec==0.12.1",
  "pillow==11.3.0",
  "platformdirs==4.3.8",
  "pluggy==1.6.0",
  "psutil==7.0.0",
  "pydantic==2.11.7",
  "pydantic-core==2.33.2",
  "pygments==2.19.2",
  "pysocks==1.7.1",
  "pytest==8.4.1",
  "pytest-asyncio==1.0.0",
  "python-dateutil==2.9.0.post0",
  "python-dotenv==1.1.1",
  "pytz==2025.2",
  "pyyaml==6.0.2",
  "requests==2.32.4",
  "rich==14.0.0",
  "selenium==4.34.0",
  "six==1.17.0",
  "sniffio==1.3.1",
  "sortedcontainers==2.4.0",
  "soupsieve==2.7",
  "tqdm==4.67.1",
  "trio==0.30.0",
  "trio-websocket==0.12.2",
  "typing-extensions==4.14.0",
  "typing-inspection==0.4.1",
  "tzdata==2025.2",
  "urllib3==2.4.0",
  "websocket-client==1.8.0",
  "wsproto==1.2.0"
]

[tool.uv]
python = "3.11"
