[project]
name = "openui-eval"
version = "0.1.0"
description = "Evaluation suite for OpenUI models"
authors = [{ name = "Anas Khan", email = "anxkhn28@gmail.com" }]
requires-python = ">=3.11"

dependencies = [
  # Core dependencies
  "ollama",
  "google-genai",
  "selenium",
  "chromedriver-autoinstaller",
  "requests",
  "pyyaml",
  "tqdm",
  "psutil",

  # Data handling and validation
  "pydantic",
  "pandas",
  "numpy",

  # Image processing
  "pillow",

  # Logging and utilities
  "python-dotenv",
  "click",
  "rich",

  # HTML processing
  "beautifulsoup4",
  "lxml",

  # Testing (optional)
  "pytest",
  "pytest-asyncio",
  "black",

  # Other dependencies
  "annotated-types",
  "anyio",
  "attrs",
  "certifi",
  "charset-normalizer",
  "h11",
  "httpcore",
  "httpx",
  "idna",
  "iniconfig",
  "markdown-it-py",
  "mdurl",
  "mypy-extensions",
  "outcome",
  "packaging",
  "pathspec",
  "platformdirs",
  "pluggy",
  "pydantic-core",
  "pygments",
  "pysocks",
  "python-dateutil",
  "pytz",
  "six",
  "sniffio",
  "sortedcontainers",
  "soupsieve",
  "trio",
  "trio-websocket",
  "typing-extensions",
  "typing-inspection",
  "tzdata",
  "urllib3",
  "websocket-client",
  "wsproto"
]
