[project]
name = "openui-eval"
version = "0.1.0"
description = "Evaluation suite for OpenUI models"
authors = [{ name = "Anas Khan", email = "anxkhn28@gmail.com" }]
requires-python = ">=3.11"

dependencies = [
  # Core dependencies
  "ollama",
  "google-genai",
  "selenium",
  "chromedriver-autoinstaller",
  "requests",
  "pyyaml",
  "tqdm",
  "psutil",

  # Additional dependencies for multi-provider support
  "python-dotenv",

  # CLI framework
  "typer",

  # Data handling and validation
  "pydantic",
  "pandas",
  "numpy",

  # Image processing
  "pillow",

  # Logging and utilities
  "click",
  "rich",

  # HTML processing
  "beautifulsoup4",
  "lxml",

  # Other dependencies
  "annotated-types",
  "anyio",
  "attrs",
  "cachetools",
  "certifi",
  "charset-normalizer",
  "google-auth",
  "h11",
  "httpcore",
  "httpx",
  "idna",
  "iniconfig",
  "lxml",
  "markdown-it-py",
  "mdurl",
  "mypy-extensions",
  "numpy",
  "outcome",
  "packaging",
  "pathspec",
  "platformdirs",
  "pluggy",
  "pyasn1",
  "pyasn1-modules",
  "pydantic-core",
  "pygments",
  "pysocks",
  "python-dateutil",
  "pytokens",
  "pytz",
  "rsa",
  "six",
  "sniffio",
  "sortedcontainers",
  "soupsieve",
  "tenacity",
  "trio",
  "trio-websocket",
  "typing-extensions",
  "typing-inspection",
  "tzdata",
  "urllib3",
  "websocket-client",
  "websockets",
  "wsproto"
]

[project.scripts]
openui-eval = "cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
openui_eval = ["tasks/*.json", "tasks/**/*", "tasks/*.md", "tasks/*.txt"]
